# OpenClip

./: .gitignore  FULL_INTEGRATION_PLAN.md  README.md
backend/: .env.example  Caddyfile  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
backend/app/: main.py
backend/app/brand/: prompt_builder.py
backend/app/core/: config.py  database.py  dependencies.py  security.py  storage.py  websocket.py
backend/app/models/: __init__.py  api_key.py  brand_context.py  brand_kit.py  calendar.py  clip.py  competitor.py  discovery.py  job.py  project.py  publish.py  scraped_post.py  social_account.py  trend.py  user.py
backend/app/providers/: __init__.py  base.py
backend/app/schemas/: brand_kit.py  clip.py  competitor.py  discovery.py  editor.py  faceless.py  publish.py  spy_feed.py
backend/app/services/: analytics_service.py  brand_context_service.py  brand_kit_service.py  broll_service.py  calendar_service.py  competitor_service.py  content_extractor.py  faceless_service.py  hashtag_service.py  project_service.py  publish_service.py  spy_service.py  webhook_service.py
backend/app/tasks/: celery_app.py  faceless_tasks.py  publish_tasks.py  spy_tasks.py  utils.py  video_tasks.py
openclip-premium-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  INTEGRATION_PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
openclip-premium-backend/alembic/: env.py
openclip-premium-backend/alembic/versions/: 001_add_scraped_posts_and_discovery_results.py
openclip-premium-backend/app/: main.py
(+261 files in other folders)
