[project]
name = "openclip-backend"
version = "0.1.0"
description = "OpenClip local backend — AI video creation platform (GPU, self-hosted)"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
